--- a/docs/config.json
+++ b/docs/config.json
@@ -21,6 +21,14 @@
       "label": "VS Code",
       "active": true,
       "moved": 0
+    },
+    {
+      "quadrant": 3,
+      "ring": 0,
+      "label": "Kedro",
+      "link": "https://www.notion.so/agreena/Kedro-model-development-standard-b7dc332bd39e4067bd5c7d59d7add9f0",
+      "active": true,
+      "moved": 0
     }
   ]
 }
