--- a/docs/config.json
+++ b/docs/config.json
@@ -1,12 +1,12 @@
 {
-  "date": "2024.04",
+  "date": "2024.06",
   "entries": [
     {
       "quadrant": 3,
-      "ring": 2,
+      "ring": 1,
       "label": "AWS Athena",
       "active": true,
-      "moved": 0
+      "moved": 1
     },
     {
       "quadrant": 3,
@@ -100,6 +100,14 @@
       "label": "AWS S3",
       "active": true,
       "moved": 0
+    },
+    {
+      "quadrant": 2,
+      "ring": 0,
+      "label": "Amazon ElastiCache",
+      "link": "https://engineering.zalando.com/tags/redis.html",
+      "active": true,
+      "moved": 1
     },
     {
       "quadrant": 2,
@@ -218,11 +226,11 @@
     },
     {
       "quadrant": 2,
-      "ring": 0,
+      "ring": 3,
       "label": "Redis",
       "link": "https://engineering.zalando.com/tags/redis.html",
       "active": true,
-      "moved": 0
+      "moved": -1
     },
     {
       "quadrant": 2,
@@ -240,15 +248,16 @@
     },
     {
       "quadrant": 2,
-      "ring": 3,
-      "label": "ZooKeeper",
+      "ring": 2,
+      "label": "Valkey",
+      "link": "https://engineering.zalando.com/tags/redis.html",
       "active": true,
-      "moved": 0
+      "moved": 1
     },
     {
       "quadrant": 2,
-      "ring": 0,
-      "label": "etcd",
+      "ring": 3,
+      "label": "ZooKeeper",
       "active": true,
       "moved": 0
     },
@@ -285,7 +294,7 @@
       "ring": 2,
       "label": "AWS Service Catalog",
       "active": true,
-      "moved": 1
+      "moved": 0
     },
     {
       "quadrant": 1,
@@ -306,7 +315,7 @@
       "ring": 2,
       "label": "Amazon Pinpoint",
       "active": true,
-      "moved": 1
+      "moved": 0
     },
     {
       "quadrant": 1,
@@ -335,7 +344,7 @@
       "ring": 2,
       "label": "Kotlin Multiplatform",
       "active": true,
-      "moved": 1
+      "moved": 0
     },
     {
       "quadrant": 1,
@@ -355,7 +364,7 @@
     {
       "quadrant": 1,
       "ring": 0,
-      "label": "OpenTracing",
+      "label": "OpenTelemetry",
       "active": true,
       "moved": 0
     },
